change skills list to a span due to alignment issues

--- a/src/components/navbarHome/style.css
+++ b/src/components/navbarHome/style.css
@@ -50,6 +50,7 @@
     max-height: 80px;
     font-size: 1em;
     padding: 0em 3em 0em 3em; 
+    cursor: pointer;
 }
 
 
