--- a/src/components/skills/style.css
+++ b/src/components/skills/style.css
@@ -25,7 +25,7 @@ line {
 
 }
 
-.skills-container > ul > li , .skills-container > h3{
+.skills-container > span , .skills-container > h3{
     color: #121212;
     font-size: 1.2rem;
     letter-spacing: 0.2em; 
@@ -75,7 +75,7 @@ line {
     
     }
     
-    .skills-container > ul > li , .skills-container > h3{
+    .skills-container > span , .skills-container > h3{
         
         font-size: 1rem;
         display: flex;
@@ -115,12 +115,12 @@ line {
     
     }
     
-    .skills-container > ul > li , .skills-container > h3{
+    .skills-container > span , .skills-container > h3{
         
         font-size: 1rem;
         display: flex;
         justify-content: flex-start;
-        align-items: center;
+        align-items: left;
        
     
     }
@@ -154,7 +154,7 @@ line {
     
     }
     
-    .skills-container > ul > li , .skills-container > h3{
+    .skills-container > span , .skills-container > h3{
         
         display: flex;
         justify-content: flex-start;
@@ -184,14 +184,17 @@ line {
     .skills-container{
         flex-direction: column;
         justify-content: center;
-        align-items: center;
-       
+        align-items: left;
     
     }
     
-    .skills-container > ul > li , .skills-container > h3{
+    .skills-container > span  , .skills-container > h3{
         
         font-size: 1.2rem;  
+        justify-content: left;
+        align-items: left;
+        background-color: blue;
+
     
     }
     
